# bot

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.migrate.yml  docker-compose.prod.yml  docker-compose.yml  fix_imports.py  fix_migrations.py  migrate.py  pyproject.toml  reset_migrations.sh
src/: .env  app.db  check_bot_settings.py  create_bot_settings_table.py  create_coupon_table.py  create_tables.py  debug_vector_store.py  run_migrations.py
src/app/: main.py
src/app/api/: dependencies.py  deps.py
src/app/api/v1/: __init__.py  auth_ui.py  bot.py  bot_settings.py  coupon.py  coupon_ui.py  dashboard.py  dashboard_api.py  order.py  product_ui.py  products.py  rag.py  rag_ui.py  tasks.py  users.py  vector_store.py  vector_store_debug.py
src/app/core/: bot_constants.py  bot_settings.py  config.py  history.py  setup.py  template_config.py
src/app/core/db/: database.py
src/app/core/utils/: cache.py  rate_limit.py
src/app/core/worker/: settings.py
src/app/crud/: crud_bot_settings.py  crud_coupon.py
src/app/data/: bot_settings.json
src/app/db/migrations/versions/: add_products_table.py
src/app/models/: bot_settings.py  coupon.py  product.py
src/app/schemas/: bot.py  coupon.py  coupon_request.py  product.py
src/app/scripts/: add_sample_products.py  add_sample_products_local.py  init_db.py  init_product_embeddings.py  test_bot_product_queries.py  test_product_search.py
src/app/services/: bot_service.py  coupon_service.py  embedding.py  markdown_converter.py  milvus_client.py  product.py  product_embedding.py  product_search.py  rag.py
src/app/services/graph_service/: edges.py  graph.py  history.py  llm.py  nodes.py  state.py  test_coupon_node.py  tools.py
src/app/templates/: base_chat.html  bot_config.html  chat_test.html  chat_widget.html  coupon_management.html  customer_support_bot.html  enhanced_landing.html  knowledge_base.html  landing.html  langgraph_chat_test.html  login.html  product_management.html  rag_form.html
src/data/: bot_settings.json
src/migrations/: env.py
src/migrations/versions/: 732f7ec2f7b1_merge_multiple_heads.py  add_bot_settings_table.py  add_coupons_table.py  add_products_table.py  standalone_bot_settings.py
src/scripts/: create_bot_settings_migration.py  create_default_bot_settings.py  create_first_tier.py
tests/: conftest.py  test_user.py
tests/helpers/: generators.py
