[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A fully Async FastAPI boilerplate using SQLAlchemy and Pydantic 2"
authors = [
    { name = "Igor Magalhaes", email = "igor.magalhaes.r@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "arq==0.26.3",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "coloredlogs==15.0.1",
    "dataclasses-json==0.6.7",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "faker==37.1.0",
    "fastapi==0.115.12",
    "fastcrud==0.15.7",
    "flatbuffers==25.2.10",
    "frozenlist==1.6.0",
    "greenlet==3.2.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "hiredis==3.1.0",
    "httpcore==1.0.8",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.23",
    "langchain-community==0.3.21",
    "langchain-core==0.3.55",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.33",
    "magika==0.6.1",
    "mako==1.3.10",
    "markdownify==1.1.0",
    "markitdown==0.1.1",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "mypy-extensions==1.1.0",
    "numpy==2.2.5",
    "onnxruntime==1.21.1",
    "orjson==3.10.16",
    "packaging==24.2",
    "pluggy==1.5.0",
    "propcache==0.3.1",
    "protobuf==6.30.2",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.4.8",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "python-dotenv==1.1.0",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.40",
    "sqlalchemy-utils==0.41.2",
    "starlette==0.46.2",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uuid==1.30",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "yarl==1.20.0",
    "zstandard==0.23.0",
    "openai==1.75.0",
    "pymilvus==2.5.6",
    "Jinja2==3.1.6",
    "langchain-openai==0.3.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741",  # Ambiguous variable name
    # "UP035", # deprecated-assertion
]
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
    "F403", # star imports
]

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.pydocstyle]
convention = "numpy"
